# cmumble

./: .gitignore  configure.ac
src/: .gitignore  Makefile.am  audio.c  audio.h  audio_old.c  cmumble.c  cmumble.h  commands.c  commands.h  connection.c  connection.h  gen_message.sh  gen_message_list.sed  gen_messages.sed  io.c  io.h  message.c  message.h  messages.c  messages.h  messages.txt  mumble.proto  protoc-c.sh  protoc-c.sh.in  socket.c  util.c  util.h  varint.c  varint.h
